<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/created_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:paddingTop="24dp"
        android:text="@string/created_by" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_below="@id/created_by"
        android:layout_marginHorizontal="100dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/created_by"
        android:src="@drawable/deva" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:gravity="center"
        android:text="@string/about_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/uname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/about_uname"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/powered_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/uname"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:paddingTop="32dp"
        android:text="@string/powered_by" />

    <ImageView
        android:id="@+id/tmdb_logo"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_below="@id/powered_by"
        android:layout_marginHorizontal="100dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/tmdb_primary_logo"
        android:src="@drawable/tmdb_logo_primary_full" />

    <TextView
        android:id="@+id/tmdb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tmdb_logo"
        android:gravity="center"
        android:text="@string/tmdb_title"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>