<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_movie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    app:cardCornerRadius="20dp"
    android:layout_marginBottom="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/rounded_corner_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:layout_gravity="">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_review_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author_name"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/baseline_star_24"
                        android:layout_marginEnd="2dp"
                        android:contentDescription="@string/rating_icon" />

                    <TextView
                        android:id="@+id/tv_movie_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_10_0" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_movie_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_movie_desc"
            android:layout_marginBottom="8dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created_at"
                android:layout_marginEnd="6dp"/>

            <TextView
                android:id="@+id/tv_movie_review_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_review_created_at" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>