<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.detail.DetailActivity">

            <ImageView
                android:id="@+id/img_movie"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/movie_placeholder"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="16dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tv_movie_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/movie_title"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_movie_release_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:text="@string/movie_release_date" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_marginTop="16dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:src="@drawable/baseline_star_24"
                                android:layout_marginEnd="2dp"
                                android:contentDescription="@string/rating_icon" />

                            <TextView
                                android:id="@+id/tv_vote_average"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_10_0"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tv_vote_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:text="@string/_200" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_movie_desc_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_movie_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/tv_movie_desc" />

                <TextView
                    android:id="@+id/tv_movie_review_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:text="@string/movie_review_title"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/fcv_reviews"
                    android:name="com.fortoszone.moviedb.ui.review.ReviewFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/baseline_favorite_24"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>