<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_movie"
    android:layout_width="160dp"
    android:layout_height="310dp"
    android:layout_marginHorizontal="8dp"
    android:orientation="horizontal"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/img_movie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/movie_placeholder"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_movie" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:maxLines="1"
                android:text="@string/movie_title"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_movie_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_release_date"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
